# trapdoor-computing

./: .gitignore  .papermill.md  .zenodo.json  CITATION.cff  CLAUDE.md  DATATYPE.md  DESIGN-trapdoor-reframing.md  ECOSYSTEM-TRIAGE.md  LICENSE  README.md  pyproject.toml
.archive/oblivious-computing-deprecated/: CLAUDE.md  README.md
.papermill/: state.md  thesis-analysis-maximizing-confidentiality.md  thesis-analysis.md  thesis-refined-2026-03-19.md  verification-2026-03-20.md
.papermill/proofs/: proof-verification-2026-03-19.md
.papermill/reviews/: iteration-review-2026-03-20.md  proof-check-2026-03-19.md  proof-check-maximizing-confidentiality-2026-03-19.md  review-2026-03-19.md  review-maximizing-confidentiality-2026-03-19.md
cts/: __init__.py  approximate.py  boolean_set.py
data/: 0.666667_6.14818_0.1_100_100000  1_5.31024_0.1_100_100000  2_2.26533_0.1_100_100000  64_3.46945e-18_0.1_100_100000  8_0.0392275_0.1_100_100000
formalism/: cipher-map-formalism.md
foundations/: README.md  bernoulli-model.md  entropy-maps.md  noisy-gates.md  trapdoor-boolean-algebra.md
img/: bpk.tex  deltaplot.tex  e_N_m_r.tex  inout.tex
include/: cipher_bool.hpp  serialize.hpp  test.hpp
include/cipher_tags/: cipher_tag.hpp  test.txt
include/cipher_tm/: driver.cpp  tm.hpp
include/cipher_value_types/: cipher_map_list.hpp  cipher_value.hpp  cipher_value_type.hpp
paper/: Makefile  main_comprehensive.tex  paper.blg  paper.out  paper.tex  references.bib
research/: cryptoph_with_fn.nb  data.eps  paper_pf.nb  perfhash.nb
src/: ex.kvs  load.cpp
tests/: test_cts.py
(+155 files in other folders)
